# ot-harjoitustyo

./: .gitignore  README.md  projecttimer.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohjeet.md  luokkakaavio.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py~
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  machine.md  monopoli.md  monopoli1.md
src/: database.py  index.py  project.py  project_repo.py  timer.py
src/database/: database.py  tables.py
src/entities/: project.py  timer.py
src/gui/: gui.py  mainview.py
src/repos/: project_repo.py
src/services/: project_service.py
src/tests/: project_test.py  repo_test.py  timer_test.py
