[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Simo Soini <simo@capscience.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
